# DriftPatch

./: Cargo.toml  PLAN.md  README.jp.md  README.md  build.rs
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: app.rs  git_import.rs  lib.rs  main.rs
src/batch/: check.rs  from_commit.rs  mod.rs  report.rs
src/diff/: line_diff.rs  mod.rs  token_diff.rs
src/encoding/: detector.rs  mod.rs
src/i18n/: en.rs  ja.rs  mod.rs
src/lexer/: custom.rs  mod.rs  profiles.rs  token.rs  tokenizer.rs
src/patch/: applier.rs  context.rs  file_ops.rs  generator.rs  mod.rs  model.rs  name_gen.rs  repository.rs  verify.rs
src/ui/: batch_window.rs  diff_editor.rs  editors.rs  git_import_window.rs  mod.rs  patch_panel.rs  settings_window.rs  toolbar.rs
