[package]
name = "driftpatch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "driftpatch"
path = "src/main.rs"

[[bin]]
name = "driftpatch-batch"
path = "src/bin/driftpatch-batch.rs"

[lib]
name = "driftpatch"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.35", default-features = false, features = ["glow", "default_fonts", "x11", "wayland", "accesskit"] }
egui = "0.35"
egui_code_editor = "0.3"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
chardetng = "0.1"
encoding_rs = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
rust_xlsxwriter = "0.79"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
